--- a/study/WebContent/WEB-INF/web.xml
+++ b/study/WebContent/WEB-INF/web.xml
@@ -58,7 +58,7 @@ jdbc:oracle:thin:@127.0.0.1:1521:xe
 	            -->
 	            
 
-<error-page>
+<!-- <error-page>
 <error-code>500</error-code>
 <location>/error/500.jsp</location>
 </error-page>	            
@@ -67,7 +67,7 @@ jdbc:oracle:thin:@127.0.0.1:1521:xe
 <error-code>404</error-code>
 <location>/error/404.jsp</location>
 </error-page>	            
-<!-- 
+ --><!-- 
 
 <error-page>
 <exception-type>java.lang.RuntimeException</exception-type>
