--- a/study/src/resource/message.properties
+++ b/study/src/resource/message.properties
@@ -1,12 +1,20 @@
 #resource/message.properties
 
-member.regist.title = Member Regist
-member.regist.memId = ID
-member.regist.memPass = PW
-member.regist.memName = Member Name
-member.regist.memLike = Hobby
-member.regist.memBir = Birth Day
-member.regist.memMail = Mail
-member.regist.memo = Member Memo
+front.welcome = welcome
+
+member.title = Member Regist
+member.memId = ID
+member.memPass = PW
+member.memName = Member Name
+member.memLike = Hobby
+member.memBir = Birth Day
+member.memMail = Mail
+member.memo = Member Memo
+
+member.regist.title = JOIN MEMBER
 member.regist.submit = Submit
 member.regist.reset = Reset
+
+min=at least {0} letters
+max= maximum {0} letters
+size={0} to {1} letters
